# LangGraph-with-flask

./: .gitignore  .sesskey  README.md  app.py  build.sh  job_offer_final.json  main.py  pyproject.toml  render.yaml  requirements.txt  setup.py
agents/: lang_mem.py  question_agent.py  update_agent.py
config/: llm_config.py
models/: job_details.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: +++.py
workflow/: form_workflow.py
